# crapengine

./: .gitignore  LICENSE  README.md  gitscript.sh
source/: CMakeLists.txt  CMakeLists.txt~
source/audio/: CMakeLists.txt  CMakeLists.txt~
source/audio/include/: CMakeLists.txt  audiobuffer.h  audiocontrol.h  audiodevice.h  audiofile.h  audiomanager.h  audiomanagerbase.h  audiosource.h  audiosystem.h
source/audio/source/: CMakeLists.txt  audiobuffer.cpp  audiocontrol.cpp  audiodevice.cpp  audiomanager.cpp  audiosource.cpp  audiosystem.cpp
source/audio/unittests/: CMakeLists.txt
source/audio/unittests/source/: test.cpp
source/core/: CMakeLists.txt  CMakeLists.txt~
source/core/include/: CMakeLists.txt  asserts.h  atomic.h  attributes.h  container.h  convert.h  delegates.h  directory.h  dynamiclibrary.h  file.h  general.h  logger.h  memory.h  plugin.h  sockets.h  strings.h  thread.h  utilities.h
source/core/include/atomic/: CMakeLists.txt  atomic_android.h  atomic_linux.h  atomic_mac.h  atomic_ps3.h  atomic_windows.h  atomic_xbox.h
source/core/include/config/: crap_compiler.h  crap_cpu.h  crap_platform.h  crap_simd.h  crap_types.h
source/core/include/container/: CMakeLists.txt  array.h  arraymap.h  binarytree.h  hashmap.h  indexedarray.h  intrusivelist.h  linearmap.h  list.h  listmap.h  map.h  queue.h  sortedarray.h  sortedarraymap.h  sortedmap.h  stack.h  tree.h  treemap.h  vector.h
source/core/include/depricated/: container.h
source/core/include/memory/: CMakeLists.txt  allocator.h  containermemory.h  generalallocator.h  linearallocator.h  mallocallocator.h  memoryarena.h  memorybounds.h  memorymanager.h  memorypool.h  memorysource.h  memorystack.h  memorytable.h  memorytagging.h  memorytracking.h  poolallocator.h  stackallocator.h
source/core/include/thread/: CMakeLists.txt  mutex_gcc.h  mutex_msvc.h  semaphore_gcc.h  semaphore_msvc.h  thread_gcc.h  thread_msvc.h  tid_gcc.h  tid_msvc.h  timer_gcc.h  timer_msvc.h
source/core/include/xml/: CMakeLists.txt  CMakeLists.txt~
source/core/source/: CMakeLists.txt  asserts.cpp  file.cpp  logger.cpp  sockets.cpp  strings.cpp  tools.cpp
source/core/source/memory/: allocator.cpp  memorymanager.cpp
source/core/source/xml/: CMakeLists.txt  CMakeLists.txt~  tinyxml2.cpp
source/core/unittests/: CMakeLists.txt  CMakeLists.txt~
source/core/unittests/source/: CMakeLists.txt  array.cpp  arraymap.cpp  assert.cpp  atomic.cpp  binarytree.cpp  container.cpp  converter.cpp  delegates.cpp  directory.cpp  hashmap.cpp  indexedarray.cpp  intrusivelist.cpp  linearallocator.cpp  linearmap.cpp  list.cpp  listmap.cpp  logger.cpp  lotto.cpp  main.cpp  map.cpp  memory.cpp  memorymanager.cpp  poolallocator.cpp  queue.cpp  sockets.cpp  sorted_array.cpp  sortedarray.cpp  (+5 more)
source/editor/: CMakeLists.txt  CMakeLists.txt~
source/editor/include/: test.h
source/engine/: CMakeLists.txt
source/engine/include/: CMakeLists.txt  audioimport.h  component.h  componentfactory.h  componentsystem.h  componenttype.h  configuration.h  converter.h  convertfilter.h  directorylistener.h  eventsystem.h  node.h  plugin.h  pluginmanager.h  plugintype.h  resourcefilter.h  resourcemanager.h  squareworld.h  system.h  taskmanager.h  test.h
source/engine/source/: CMakeLists.txt  audioimport.cpp  component.cpp  componentfactory.cpp  componentsystem.cpp  componenttype.cpp  configuration.cpp  converter.cpp  convertfilter.cpp  directorylistener.cpp  eventsystem.cpp  node.cpp  pluginmanager.cpp  resourcefilter.cpp  resourcemanager.cpp  squareworld.cpp  system.cpp  taskmanager.cpp
source/engine/unittests/: CMakeLists.txt
source/interfaces/: CMakeLists.txt
source/interfaces/include/: CMakeLists.txt  iaudiosystem.h  iphysicsystem2d.h  irenderer2d.h
source/interfaces/source/: CMakeLists.txt
source/network/: CMakeLists.txt
source/network/include/: CMakeLists.txt  networkcommand.h  networkcommandqueue.h  packetinformation.h  packetlayer.h  udpconnection.h  udperrorgenerator.h  udpnetwork.h  udpreliability.h
source/network/source/: CMakeLists.txt  networkcommand.cpp  networkcommandqueue.cpp  udpconnection.cpp  udpnetwork.cpp  udpreliability.cpp
source/network/unittests/: CMakeLists.txt
source/physic/: CMakeLists.txt  CMakeLists.txt~
source/physic/include/: CMakeLists.txt  physicsystem2d.h  physicsystem2dbase.h  physicsystem2dstub.h  physicsystembox2d.h  physictypes2d.h
source/physic/source/: CMakeLists.txt  physicsystem2d.cpp  physicsystem2dstub.cpp  physictypes2d.cpp
source/physic/unittests/: CMakeLists.txt  CMakeLists.txt~
source/plugins/: CMakeLists.txt
source/plugins/audio/: CMakeLists.txt
source/plugins/components/: CMakeLists.txt
source/plugins/components (copy)/: CMakeLists.txt
source/plugins/default/: CMakeLists.txt
source/plugins/network/: CMakeLists.txt
source/plugins/physic2d/: CMakeLists.txt
source/plugins/resources/: CMakeLists.txt
source/plugins/source/: testplugin.cpp
source/plugins/video2d/: CMakeLists.txt
source/runtime/: CMakeLists.txt  CMakeLists.txt~
source/runtime/include/: CMakeLists.txt  game.h  test.h  test.h~  world.h
source/runtime/source/: CMakeLists.txt  game.cpp  test.cpp  world.cpp
source/runtime/unittests/: CMakeLists.txt
source/scripting/: CMakeLists.txt  CMakeLists.txt~
source/scripting/unittests/: CMakeLists.txt  CMakeLists.txt~
source/testprojects/: CMakeLists.txt
source/testprojects/testgame/: CMakeLists.txt
source/video/: CMakeLists.txt  CMakeLists.txt~
source/video/include/: CMakeLists.txt  attributes.h  baseinput.h  color.h  controllerinput.h  elements2d.h  font.h  input.h  inputmanager.h  inputmanagerbase.h  inputsystem.h  keyboardinput.h  mouseinput.h  rendercontext.h  renderer.h  renderer2d.h  renderpass.h  rendersystem.h  renderwindow.h  test.h
source/video/source/: CMakeLists.txt  baseinput.cpp  controllerinput.cpp  elements2d.cpp  input.cpp  inputmanager.cpp  inputsystem.cpp  keyboardinput.cpp  mouseinput.cpp  rendercontext.cpp  renderer.cpp  renderer2d.cpp  renderpass.cpp  rendersystem.cpp  renderwindow.cpp  test.cpp
source/video/unittests/: CMakeLists.txt
(+2530 files in other folders)
