
# Library version information
SET(CRAP_CORE_MAJOR_VERSION 0)
SET(CRAP_CORE_MAJOR_VERSION 0)
SET(CRAP_CORE_PATCH_VERSION 1)
SET(CRAP_CORE_VERSION
    ${CRAP_CORE_MAJOR_VERSION}.${CRAP_CORE_MINOR_VERSION}.${CRAP_CORE_PATCH_VERSION}
)

OPTION(CRAP_BUILD_NETWORK_PLUGIN "Build crap network plugin" OFF)
IF(CRAP_BUILD_NETWORK_PLUGIN)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
ENDIF(CRAP_BUILD_NETWORK_PLUGIN)

OPTION(CRAP_BUILD_RESOURCE_PLUGIN "Build crap resource plugin" OFF)
IF(CRAP_BUILD_RESOURCE_PLUGIN)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/resources)
ENDIF(CRAP_BUILD_RESOURCE_PLUGIN)

OPTION(CRAP_BUILD_COMPONENT_PLUGIN "Build crap component plugin" OFF)
IF(CRAP_BUILD_COMPONENT_PLUGIN)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/components)
ENDIF(CRAP_BUILD_COMPONENT_PLUGIN)

