
# Library version information
SET(CRAP_CORE_MAJOR_VERSION 0)
SET(CRAP_CORE_MAJOR_VERSION 0)
SET(CRAP_CORE_PATCH_VERSION 1)
SET(CRAP_CORE_VERSION
    ${CRAP_CORE_MAJOR_VERSION}.${CRAP_CORE_MINOR_VERSION}.${CRAP_CORE_PATCH_VERSION}
)

OPTION(CRAP_BUILD_NETWORK_PLUGIN "Build crap network plugin" OFF)
IF(CRAP_BUILD_NETWORK_PLUGIN)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
ENDIF(CRAP_BUILD_NETWORK_PLUGIN)

#OPTION(CRAP_BUILD_RESOURCE_PLUGIN "Build crap resource plugin" OFF)
#IF(CRAP_BUILD_RESOURCE_PLUGIN)
#    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/resources)
#ENDIF(CRAP_BUILD_RESOURCE_PLUGIN)

OPTION(CRAP_BUILD_DEFAULT_PLUGIN "Build crap default plugin" OFF)
IF(CRAP_BUILD_DEFAULT_PLUGIN)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/default) 
ENDIF(CRAP_BUILD_DEFAULT_PLUGIN)

OPTION(CRAP_BUILD_PHYSIC2D_PLUGIN "Build crap physic2d plugin" OFF)
IF(CRAP_BUILD_PHYSIC2D_PLUGIN)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/physic2d)
ENDIF(CRAP_BUILD_PHYSIC2D_PLUGIN)

OPTION(CRAP_BUILD_AUDIO_PLUGIN "Build crap audio plugin" OFF)
IF(CRAP_BUILD_AUDIO_PLUGIN)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/audio)
ENDIF(CRAP_BUILD_AUDIO_PLUGIN)

OPTION(CRAP_BUILD_VIDEO2D_PLUGIN "Build crap video2d plugin" OFF)
IF(CRAP_BUILD_VIDEO2D_PLUGIN)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/video2d)
ENDIF(CRAP_BUILD_VIDEO2D_PLUGIN)
